--- a/css/main.css
+++ b/css/main.css
@@ -1261,7 +1261,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .progress-table .table-head .serial, .progress-table .table-head .country, .progress-table .table-head .visit, .progress-table .table-head .percentage {
   color: #222222;
-  line-height: 40px;
+  line-height: 30px;
   text-transform: uppercase;
   font-weight: 500;
 }
@@ -1323,6 +1323,7 @@ h1, h2, h3, h4, h5, h6 {
 .progress-table .table-row .percentage .progress .progress-bar.color-8 {
   background-color: #e66686;
 }
+
 
 .single-gallery-image {
   margin-top: 30px;
@@ -4333,6 +4334,40 @@ dl.accordion.time-line:before {
   font-weight: 500;
   color: #8490ff;
   margin-right: 30px;
+}
+
+
+#myInput {
+    background-image: url('/css/searchicon.png'); /* Add a search icon to input */
+    background-position: 10px 12px; /* Position the search icon */
+    background-repeat: no-repeat; /* Do not repeat the icon image */
+    width: 100%; /* Full-width */
+    font-size: 16px; /* Increase font-size */
+    padding: 12px 20px 12px 40px; /* Add some padding */
+    border: 1px solid #ddd; /* Add a grey border */
+    margin-bottom: 12px; /* Add some space below the input */
+}
+
+.progress-table  {
+    border-collapse: collapse; /* Collapse borders */
+    width: 100%; /* Full-width */
+    border: 1px solid #ddd; /* Add a grey border */
+    font-size: 18px; /* Increase font-size */
+}
+
+.progress-table  th, .progress-table  td {
+    text-align: left; /* Left-align text */
+    padding: 12px; /* Add padding */
+}
+
+.progress-table  tr {
+    /* Add a bottom border to all table rows */
+    border-bottom: 1px solid #ddd;
+}
+
+.progress-table  tr.header, .progress-table  tr:hover {
+    /* Add a grey background color to the table header and on hover */
+    background-color: #f1f1f1;
 }
 
 /* =================================== */
